--- a/style.css
+++ b/style.css
@@ -4,21 +4,58 @@ body {
   --color-purple-dark: #6247aa;
   --color-purple: #a06cd5;
   --color-purple-light: #e2cfea;
+  --color-pink-light: #f48fb1;
+  --color-pink-darker: #f06292;
 
   font-family: 'roboto';
 }
 
 nav {
-  
 }
 
 .link {
-
 }
 
 .header {
   width: 100%;
   height: 100px;
-  background-color: var(--color-purple-dark);
+  background-color: var(--color-purple);
   color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.header h1 {
+  text-align: center;
+  padding: 15px;
+}
+
+#about {
+  position: relative;
+  padding: 30px;
+  top: 50px;
+}
+
+#about-title {
+  color: var(--color-pink-darker);
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#list-container {
+  text-align: center;
+}
+
+ul {
+  display: inline-block;
+  color: var(--color-pink-light);
+  margin: auto;
+  list-style-type: '🌈';
+}
+
+li {
+  padding: 3px 0 15px 25px;
 }
