--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 .about h1 {
-  color: #e1bee7;
+  color: var(--color-purple-light);
   text-align: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -15,7 +15,7 @@
 
 .about ul {
   display: inline-block;
-  color: #e1bee7;
+  color: var(--color-purple-light);
   margin: auto;
   list-style-type: '🌈';
 }
@@ -30,6 +30,7 @@
 
 .stylingForOppgave2 {
   background-color: var(--color-purple);
+  color: var(--color-purple-darker);
 }
 
 .stylingForOppgave3 {
