--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@
 
 .stylingForOppgave2 {
   background-color: var(--color-purple);
-  color: var(--color-purple-darker);
+  color: var(--color-purple-dark);
 }
 
 .stylingForOppgave3 {
   background-color: var(--color-purple-dark);
+  color: var(--color-purple-darker);
 }
