La til oppgavetekst til avatar-oppgave

--- a/generalStyling.css
+++ b/generalStyling.css
@@ -6,7 +6,7 @@ body {
   --color-purple: #a06cd5;
   --color-purple-light: #e1bee7;
   --color-purple-lighter: #e2cfea;
-  --color-purple-darker: #4a148c;
+  --color-purple-darker: #2e154d;
 
   margin: 0;
   padding: 0;
