--- a/style.css
+++ b/style.css
@@ -24,13 +24,21 @@
   padding: 3px 0 15px 20px;
 }
 
+.avatar {
+  padding-left: 30px;
+}
+
+.avatar p {
+  padding: 2px 0 2px 10px;
+}
+
 .stylingForOppgave1 {
   background-color: var(--color-purple-light);
 }
 
 .stylingForOppgave2 {
   background-color: var(--color-purple);
-  color: var(--color-purple-dark);
+  color: var(--color-purple-light);
 }
 
 .stylingForOppgave3 {
