Oppdater readme, set aktiv styling på page

--- a/generalStyling.css
+++ b/generalStyling.css
@@ -32,6 +32,11 @@ header > h1 {
   margin-right: 2em;
 }
 
+.active-page {
+  filter: brightness(85%);
+  text-decoration: underline;
+}
+
 section {
   width: 100%;
   height: 200px;
