--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   padding: 2px 0 2px 10px;
 }
 
-.stylingForOppgave1 {
+.stylingForSeksjon1 {
   background-color: var(--color-purple-light);
 }
 
