--- a/generalStyling.css
+++ b/generalStyling.css
@@ -2,6 +2,7 @@ body {
   /* FARGE VARIABLER */
   --color-green-dark: #062726;
   --color-blue-dark: #102b3f;
+  --color-blue-darker: #121b3c;
   --color-purple-dark: #6247aa;
   --color-purple: #a06cd5;
   --color-purple-light: #e1bee7;
@@ -11,7 +12,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'roboto';
-
 }
 
 header {
