--- a/generalStyling.css
+++ b/generalStyling.css
@@ -28,21 +28,30 @@ header > h1 {
   margin: 0;
 }
 
-.menu {
-  margin-right: 2em;
-}
-
-.active-page {
-  filter: brightness(85%);
-  text-decoration: underline;
-}
-
 section {
   width: 100%;
-  height: 200px;
+  height: 180px;
   padding: 2rem 1rem;
 }
 
+section > h2 {
+  padding-bottom: 0.5rem;
+}
+
 main > section:last-child {
-  min-height: 500px;
+  min-height: 300px;
+}
+
+.konfetti-knapp {
+  font-family: 'roboto';
+  font-weight: 500;
+  color: var(--color-purple-light);
+  background-color: var(--color-purple-dark);
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  border: 3px solid var(--color-purple-lighter);
+}
+
+.konfetti-knapp:hover {
+  filter: brightness(80%);
 }
