--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+/* ------ OM GRUPPA ------ */
+
 .about {
   position: relative;
+  text-align: center;
 }
 
 .about h1 {
@@ -8,11 +11,6 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
-.about-container {
-  text-align: center;
-}
-
 .about ul {
   display: inline-block;
   color: var(--color-purple-light);
@@ -24,6 +22,8 @@
   padding: 3px 0 15px 20px;
 }
 
+/* ------PERSONLIG AVATAR------*/
+
 .avatar {
   padding-left: 30px;
 }
@@ -32,8 +32,8 @@
   padding: 2px 0 2px 10px;
 }
 
-/*  STYLING FOR Seksjon1EndreTekstOgFarger.tsx */
-/* 
+/*  BAKGRUNNSFARGE for de ulike oppgaveseksjonene
+-----------------------------------------------
 Under bruker vi en fargevariabel vi har satt i css-filen "generalStyling.css". Det går også helt fint å erstatte "var(--color-purple-light)" med en HEX fargekode direkte. 
 
 Erstatt:  background-color: var(--color-purple-light); 
@@ -43,12 +43,12 @@ med: background-color: #e1bee7;
   background-color: var(--color-purple-light);
 }
 
-.stylingForOppgave2 {
+.stylingForSeksjon2 {
   background-color: var(--color-purple);
   color: var(--color-purple-light);
 }
 
-.stylingForOppgave3 {
+.stylingForSeksjon3 {
   background-color: var(--color-purple-dark);
   color: var(--color-purple-darker);
 }
@@ -56,4 +56,5 @@ med: background-color: #e1bee7;
 .stylingForSeksjon4 {
   background-color: var(--color-blue-darker);
   color: var(--color-purple-light);
+  align-items: center;
 }
