--- a/styling-generell.css
+++ b/styling-generell.css
@@ -11,7 +11,7 @@ body {
 
   margin: 0;
   padding: 0;
-  font-family: 'roboto';
+  font-family: 'Gill Sans', sans-serif;
 }
 
 header {
@@ -28,11 +28,9 @@ header > h1 {
   margin: 0;
 }
 
-
-
 section {
   width: 100%;
-  height: 200px;
+  height: 100%;
   padding: 2rem 1rem;
 }
 
