--- a/styling-generell.css
+++ b/styling-generell.css
@@ -4,10 +4,10 @@ body {
   --color-blue-dark: #102b3f;
   --color-blue-darker: #121b3c;
   --color-purple-dark: #6247aa;
-  --color-purple: #a06cd5;
-  --color-purple-light: #e1bee7;
+  --color-purple: #8000ff;
+  --color-purple-light: #5fff03;
   --color-purple-lighter: #e2cfea;
-  --color-purple-darker: #2e154d;
+  --color-purple-darker: #00d9ff;
 
   margin: 0;
   padding: 0;
