--- a/styling-generell.css
+++ b/styling-generell.css
@@ -3,8 +3,8 @@ body {
   --color-green-dark: #062726;
   --color-blue-dark: #102b3f;
   --color-blue-darker: #121b3c;
-  --color-purple-dark: #6247aa;
-  --color-purple: #a06cd5;
+  --color-purple-dark: #0E7327;
+  --color-purple: #F10B0B;
   --color-purple-light: #e1bee7;
   --color-purple-lighter: #e2cfea;
   --color-purple-darker: #2e154d;
