--- a/styling-komponenter.css
+++ b/styling-komponenter.css
@@ -6,10 +6,12 @@ Erstatt:  background-color: var(--color-purple-light);
 med: background-color: #e1bee7;
 */
 .stylingForSeksjon1 {
-  background-color: var(--color-purple-light);
+  
+  //background-color: var(--color-purple-light);
 }
 
 .stylingForSeksjon2 {
+  background-image: url("https://media.snl.no/media/143853/standard_2019-nCoV-CDC-23312_without_background.png");
   background-color: var(--color-purple);
   color: var(--color-purple-light);
 }
@@ -20,6 +22,7 @@ med: background-color: #e1bee7;
 }
 
 .stylingForSeksjon4 {
+  background-image: url("https://media.snl.no/media/143853/standard_2019-nCoV-CDC-23312_without_background.png");
   background-color: var(--color-blue-darker);
   color: var(--color-purple-light);
 }
